--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,12 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     //Lifecycle (Architecture Components)
-    def archLifecycleVersion = '2.2.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$archLifecycleVersion"
-
+    def lifecycle_version = '2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     //Stetho (Debugging - Facebook)
     implementation 'com.facebook.stetho:stetho:1.5.1'
