Created Bag Screen. Create Room database, DAO, LiveData.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.mychelantonacio.packstar"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -57,4 +57,7 @@ dependencies {
 
     //Stetho (Debugging - Facebook)
     implementation 'com.facebook.stetho:stetho:1.5.1'
+
+    //Pulsator
+    implementation 'pl.bclogic:pulsator4droid:1.0.3'
 }
