--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:theme="@style/Theme.App">
 
         <activity
-            android:name=".view.MainActivity"
-            android:theme="@style/AppTheme.Launcher"
-            android:screenOrientation="portrait">
+            android:name=".view.activities.MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,12 +22,22 @@
         </activity>
 
         <activity
-            android:name=".view.CreateBagActivity"
+            android:name=".view.activities.CreateBagActivity"
             android:label="@string/title_screen_create_bag"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".view.ListBagActivity" />
+        <activity android:name=".view.activities.ListBagActivity" />
+
+        <activity
+            android:name=".view.activities.ListItemActivity"
+            android:label="@string/title_screen_list_item"/>
+
+        <activity
+            android:name=".view.activities.CreateItemActivity"
+            android:label="@string/title_screen_create_item"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
 
         <meta-data
             android:name="preloaded_fonts"
