--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.activities.CreateBagActivity"
             android:label="@string/title_screen_create_bag"
@@ -31,13 +31,18 @@
 
         <activity
             android:name=".view.activities.ListItemActivity"
-            android:label="@string/title_screen_list_item"/>
-
+            android:label="@string/title_screen_list_item" />
         <activity
             android:name=".view.activities.CreateItemActivity"
             android:label="@string/title_screen_create_item"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity android:name=".view.activities.EditItemActivity"
+            android:label="@string/title_screen_edit_item"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
 
         <meta-data
             android:name="preloaded_fonts"
