--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
 
+
         <activity
             android:name=".view.activities.MainActivity"
             android:screenOrientation="portrait"
@@ -26,9 +27,7 @@
             android:label="@string/title_screen_create_bag"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
         <activity android:name=".view.activities.ListBagActivity" />
-
         <activity
             android:name=".view.activities.ListItemActivity"
             android:label="@string/title_screen_list_item" />
@@ -37,12 +36,15 @@
             android:label="@string/title_screen_create_item"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
-        <activity android:name=".view.activities.EditItemActivity"
+        <activity
+            android:name=".view.activities.EditItemActivity"
             android:label="@string/title_screen_edit_item"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
+        <activity android:name=".view.activities.EditBagActivity"
+            android:label="@string/title_screen_edit_bag"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
         <meta-data
             android:name="preloaded_fonts"
