--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".view.activities.CreateBagActivity"
             android:label="@string/title_screen_create_bag"
+            android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".view.activities.ListBagActivity" />
