--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,14 @@ dependencies {
     def dagger_version = '2.28'
     implementation "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+
+    def work_version = "2.3.4"
+    implementation "androidx.work:work-runtime:$work_version"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+
+
+
+
+
 }
