--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.mychelantonacio.packstar">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:allowBackup="true"
@@ -35,7 +35,7 @@
         <activity
             android:name=".view.activities.CreateBagActivity"
             android:label="@string/title_screen_create_bag"
-            android:noHistory="true"
+
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".view.activities.ListBagActivity" />
