--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mychelantonacio.packstar">
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
@@ -15,27 +15,18 @@
         android:theme="@style/Theme.App">
 
 
-        <receiver
-            android:name= ".view.activities.ReminderBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true">
-        </receiver>
-
-
         <activity
             android:name=".view.activities.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".view.activities.CreateBagActivity"
             android:label="@string/title_screen_create_bag"
-
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".view.activities.ListBagActivity" />
