--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,23 +30,31 @@
             android:label="@string/title_screen_create_bag"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".view.activities.ListBagActivity" />
+
+        <activity android:name=".view.activities.ListBagActivity"
+            android:screenOrientation="portrait"/>
+
         <activity
             android:name=".view.activities.ListItemActivity"
             android:label="@string/title_screen_list_item" />
+
         <activity
             android:name=".view.activities.CreateItemActivity"
             android:label="@string/title_screen_create_item"
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+
         <activity
             android:name=".view.activities.EditItemActivity"
             android:label="@string/title_screen_edit_item"
+            android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+
         <activity android:name=".view.activities.EditBagActivity"
             android:label="@string/title_screen_edit_bag"
+            android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
