--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mychelantonacio.packstar">
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -14,14 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
-
-
+        <activity android:name=".view.activities.EmptyBagActivity"></activity>
         <activity
             android:name=".view.activities.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,29 +29,26 @@
             android:label="@string/title_screen_create_bag"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
-        <activity android:name=".view.activities.ListBagActivity"
-            android:screenOrientation="portrait"/>
-
+        <activity
+            android:name=".view.activities.ListBagActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.activities.ListItemActivity"
             android:label="@string/title_screen_list_item" />
-
         <activity
             android:name=".view.activities.CreateItemActivity"
             android:label="@string/title_screen_create_item"
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
         <activity
             android:name=".view.activities.EditItemActivity"
             android:label="@string/title_screen_edit_item"
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
-        <activity android:name=".view.activities.EditBagActivity"
+        <activity
+            android:name=".view.activities.EditBagActivity"
             android:label="@string/title_screen_edit_bag"
             android:noHistory="true"
             android:screenOrientation="portrait"
