--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
-        <activity android:name=".view.activities.EmptyBagActivity"></activity>
         <activity
             android:name=".view.activities.MainActivity"
             android:screenOrientation="portrait"
@@ -53,6 +52,10 @@
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".view.activities.EmptyBagActivity"
+            android:label="@string/title_screen_empty_bag"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="preloaded_fonts"
