--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
+        <activity android:name=".view.activities.EmptyItemActivity"></activity>
         <activity
             android:name=".view.activities.MainActivity"
             android:screenOrientation="portrait"
