--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
-        <activity android:name=".view.activities.EmptyItemActivity"></activity>
+
         <activity
             android:name=".view.activities.MainActivity"
             android:screenOrientation="portrait"
@@ -55,6 +55,12 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".view.activities.EmptyBagActivity"
+            android:label="@string/title_screen_empty_bag"
+            android:noHistory="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.activities.EmptyItemActivity"
+            android:noHistory="true"
             android:label="@string/title_screen_empty_bag"
             android:screenOrientation="portrait" />
 
