List Bag - delete bag - bug fixed when deleting bag. Discard dialog - changed to only appears when there is input. Create/Edit bag - deleted calendar and comment icons. Reminder text - changed to "add reminder". List Item - text formatted.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,8 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     androidTestImplementation "androidx.work:work-testing:$work_version"
 
-
+    //Flexbox layout
+    implementation 'com.google.android:flexbox:2.0.1'
 
 
 
