Added Google services to app and project gradle builds.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -62,6 +63,12 @@ dependencies {
 
     //Pulsator
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    apply plugin: 'com.google.firebase.crashlytics'
+
+
 
     //Dagger 2
     def dagger_version = '2.28'
